# paperhelper

./: .gitignore  README.md  plan.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py  models.py  storage.py  utils.py
backend/app/workflow/: nodes.py
backend/fastapi/: __init__.py  applications.py  background.py  dependencies.py  exceptions.py  file.py  testclient.py  uploads.py
backend/fastapi/middleware/: cors.py
backend/paperhelper_backend.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/tests/: test_api.py  test_utils.py  test_workflow.py
frontend/: README.md  index.html  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: GlossaryPanel.tsx  MindMapPanel.tsx  ProgressPanel.tsx  SummaryPanel.tsx  UploadPanel.tsx
