[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paperhelper-backend"
version = "0.1.0"
description = "Local paper analysis backend"
authors = [{name = "Paper Helper"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
]
[tool.setuptools]
packages = ["app", "fastapi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "app"]
